fix navbar collapse issue and mt for md size reason why mold

--- a/app.css
+++ b/app.css
@@ -9,7 +9,7 @@ body {
 }
 
 #mainNavbar .nav-link {
-    color:white;
+    color:black;
 }
 
 #mainNavbar .nav-link:hover {
@@ -17,7 +17,7 @@ body {
 }
 
 #mainNavbar .navbar-brand {
-    color: aqua;
+    color: black;
     font-size: 1.5rem;
 }
 
@@ -62,7 +62,7 @@ body {
 }
 
 .navbar.scrolled {
-    background: antiquewhite;
+    background: rgb(54, 58, 54);
     transition: background 1s;
 }
 
